Fix T51153: Video duration is detected wrong after FFmpeg update

The issue was caused by stupid workaorund for libav. Now things works for
FFmpeg. There might need some tweaks needed for Libav, but that one is
not really priority for support.